--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.37.1
-transformers==4.42.4
+transformers>=4.44.0
 accelerate>=0.33.0
 torch>=2.2.0; platform_system != "Darwin" or platform_machine != "arm64"
 torch>=2.2.0; platform_system == "Darwin" and platform_machine == "arm64" and python_version < "3.12"
